style.css
html, body {
    margin: 0;
    padding: 0;
    font-family: Tahoma, Geneva, Verdana, sans-serif
}

hr {
    width: 80%;
    margin: 20px auto;
    height: 5px;
    background-color: #f76501;
    border: none;
}

header {
    text-align:center;
}
header .logo {
    margin: 50px auto 20px;
}

.logo {
    background-image: url(images/logo.png);
    width: 320px;
    height: 120px;
    background-size: contain;
    background-repeat: no-repeat;
}

.github :before {
    content: '';
}

.github {
    text-decoration: none;
    text-align: center;
    color: #333232;
}

.github :visited {
    color: #333232;
}

table {
    max-width: 100%;
}

.commit-item {
    margin:5px;
    display: block;
    padding-bottom: 5px;
    border: 3px solid #f76501;
    background-color: #CCC;
    width:100%;
    height: 120px;
    position:relative;
}

.commit-item .github-commit {
    position: absolute;
    bottom: 5px;
    margin-left: auto;
    margin-right: auto;
    left: 0;
    right: 0;
}

.commit-item span {
    margin-bottom: -5px;
    margin-top: 5px;
    display: block;
    font-size: 0.9em;
    font-weight: bold;
}

h4 {
    text-transform: uppercase;
}

section {
    margin: 15px;
}

.center {
    text-align:center;
}

.fa-check {
    color: green;
}

.fa-exclamation-triangle {
    color: red;
}

.fa-clock-o {
    color: darkgoldenrod;
}

